<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/result"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num_1" />

    <EditText
        android:id="@+id/secondEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num_2" />

    <Button
        android:id="@+id/equalsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/equals_key"
        android:textSize="30sp" />

    <Button
        android:id="@+id/divideBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/devide_key"
        android:textSize="30sp" />

</LinearLayout>